--- a/sdgpweb/templates/base.html
+++ b/sdgpweb/templates/base.html
@@ -30,7 +30,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-custom">
 		<a class="navbar-brand" id="navbar-name" href="{% url 'home' %}">
-			<img class="navbar-logo-img" src="{% static 'img/flr_logo_outline_white.png' %}">
+			<img class="navbar-logo-img" src="{% static 'img/sdgp_logo.png' %}" style="width:50px;">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
