--- a/sdgpweb/templates/home.html
+++ b/sdgpweb/templates/home.html
@@ -4,33 +4,52 @@
 
 {% block content %}
 <div class="hero-image">
-		<div class="hero-text text-center">
-			<!-- <img class="w-50 mb-2" src="{% static 'img/home_div.png' %}"> -->
-			<h1 class="hero-header">Sarawak Delta Geopark</h1>
+	<div class="hero-text text-center">
+		<!-- <img class="w-50 mb-2" src="{% static 'img/home_div.png' %}"> -->
+		<h1 class="hero-header">Sarawak Delta Geopark</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.</p>
+		<br>
+		<form class="d-flex" method="POST" action="">
+			{% csrf_token %}
+			<input class="form-control mr-2" type="text" placeholder="What's on your mind?" aria-label="Search" name="searched">
+			<button class="btn btn-custom">Search</button>
+		</form>
+	</div>
+</div>
+<br>
+<div class="container">
+	<div class="row  border rounded shadow p-4">
+		<div class="col-sm-8">
+			<h3>What is Sarawak Delta Geopark?</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p>
-			<br>
-			<form class="d-flex" method="POST" action="">
-				{% csrf_token %}
-				<input class="form-control mr-2" type="text" placeholder="What's on your mind?" aria-label="Search" name="searched">
-				<button class="btn btn-custom">Search</button>
-			</form>
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div class="col-sm-4">
+			<img class="w-100" src="{% static 'img/fun_map.png' %}">
 		</div>
 	</div>
-<div class="custom-div">
-	<br>
-	<h3>it works</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
+<br>
+<br>
+<div class=" mt-4 mb-4">
+		<h1 class="custom-div text-center mb-4">A place of <span style="color:#E97451;">magnificient</span> natural architecture, biodiversity, spirit and value</h1>
+		<br>
+		<br>
+		<video class="w-100" controls autoplay loop>
+		  	<source src="{% static 'img/sdgp_drone_vid.mp4' %}" type="video/mp4">
+		 	Your browser does not support the video tag.
+		</video>
+	</div>
 {% endblock %}
