--- a/sdgpweb/templates/home.html
+++ b/sdgpweb/templates/home.html
@@ -21,7 +21,7 @@
 <div class="container">
 	<div class="row  border rounded shadow p-4">
 		<div class="col-sm-8">
-			<h3>What is Sarawak Delta Geopark?</h3>
+			<h3>What is <span style="color:#E97451;">Sarawak Delta Geopark?</span></h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -44,12 +44,15 @@
 <br>
 <br>
 <div class=" mt-4 mb-4">
-		<h1 class="custom-div text-center mb-4">A place of <span style="color:#E97451;">magnificient</span> natural architecture, biodiversity, spirit and value</h1>
-		<br>
-		<br>
-		<video class="w-100" controls autoplay loop>
-		  	<source src="{% static 'img/sdgp_drone_vid.mp4' %}" type="video/mp4">
-		 	Your browser does not support the video tag.
-		</video>
-	</div>
+	<h1 class="custom-div text-center mb-4">A place of <span style="color:#E97451;">magnificient</span> natural architecture, biodiversity, spirit and value</h1>
+	<br>
+	<br>
+	<video class="w-100" controls autoplay loop>
+	  	<source src="{% static 'img/sdgp_drone_vid.mp4' %}" type="video/mp4">
+	 	Your browser does not support the video tag.
+	</video>
+</div>
+<div class="container">
+	<h3>Get the latest updates</h3>
+</div>
 {% endblock %}
