--- a/sdgpweb/templates/base.html
+++ b/sdgpweb/templates/base.html
@@ -38,13 +38,16 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="#">HOME</a>
+					<a class="nav-link" href="{% url 'home' %}">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
+					<a class="nav-link" href="{% url 'about' %}">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'post_index' %}">Blog</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#">Events</a>
+					<a class="nav-link" href="{% url 'event' %}">Events</a>
 				</li>
 				<li>
 					<a class="nav-link" href="#">Publications</a>
