--- a/sdgpweb/templates/home.html
+++ b/sdgpweb/templates/home.html
@@ -6,7 +6,7 @@
 <div class="hero-image">
 	<div class="hero-text text-center">
 		<!-- <img class="w-50 mb-2" src="{% static 'img/home_div.png' %}"> -->
-		<h1 class="hero-header">Sarawak Delta Geopark</h1>
+		<h1 class="hero-header">Sarawak Delta <span style="color:#E97451;">Geopark</span></h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua.</p>
 		<br>
@@ -15,6 +15,9 @@
 			<input class="form-control mr-2" type="text" placeholder="What's on your mind?" aria-label="Search" name="searched">
 			<button class="btn btn-custom">Search</button>
 		</form>
+	</div>
+	<div class="carousel-caption">
+		<i class="fa fa-angle-down bounce"></i>
 	</div>
 </div>
 <br>
