--- a/blog/templates/blog/post_index.html
+++ b/blog/templates/blog/post_index.html
@@ -1,13 +1,53 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
-<br>
-<div class="custom-div">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="blog-image">
+	<div class="hero-text text-center">
+		<div class="custom-div text-left">
+			<h4 class="hero-header"><span style="color:#E97451;">Our</span> updates</h4>
+			<br>
+			<hr style="border-top: 1px solid white;">
+			<br>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat.</p>
+			<div class="carousel-caption">
+				<i class="fa fa-angle-down bounce"></i>
+			</div>
+		</div>
+	</div>
 </div>
+<br>
+<br>
+
+<div class="custom-div">
+	{% if user.is_authenticated  and user.is_staff %}
+			<div class="col-sm-12 d-flex justify-content-center mb-4">
+				<a href="">
+					<button class="btn btn-custom">Add Post</button>
+				</a>
+			</div>
+		{% endif %}
+	<br>
+	{% for post in object_list %}
+	<div class="row mb-4">
+		<div class="col-sm-4">
+			<a href="{{ post.get_absolute_url }}">
+				<img class="w-100" src="{{ post.get_post_thumbnail }}" style="width:190px; height: 130px; object-fit: contain;">
+			</a>
+		</div>
+		<div class="col-sm-8 mb-4">
+			<a class="title-label" href="{{ post.get_absolute_url }}">
+				<h5><strong>{{ post.title }}</strong></h5>
+			</a>
+			<p class="text-label">{{ post.post_snippet }}</p>
+			<small class="text-muted">{{ post.date_written.date }}</small>
+		</div>
+	</div>
+	{% endfor %}
+</div>
+
 {% endblock %}
