--- a/blog/templates/blog/post_index.html
+++ b/blog/templates/blog/post_index.html
@@ -26,14 +26,14 @@
 <div class="custom-div">
 	{% if user.is_authenticated  and user.is_staff %}
 			<div class="col-sm-12 d-flex justify-content-center mb-4">
-				<a href="">
+				<a href="{% url 'post_add' %}">
 					<button class="btn btn-custom">Add Post</button>
 				</a>
 			</div>
 		{% endif %}
 	<br>
 	{% for post in object_list %}
-	<div class="row mb-4">
+	<div class="row mb-4 border rounded shadow p-4">
 		<div class="col-sm-4">
 			<a href="{{ post.get_absolute_url }}">
 				<img class="w-100" src="{{ post.get_post_thumbnail }}" style="width:190px; height: 130px; object-fit: contain;">
