--- a/sdgpweb/templates/home.html
+++ b/sdgpweb/templates/home.html
@@ -55,7 +55,61 @@
 	 	Your browser does not support the video tag.
 	</video>
 </div>
+<br>
+<div class="custom-div border rounded shadow p-4">
+	<h2>The <span style="color:#E97451;">Attraction</span> of Sarawak Delta Geopark</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p><i>To be inserted with some design and images</i></p>
+</div>
+<br>
+<br>
 <div class="container">
-	<h3>Get the latest updates</h3>
+	<hr>
+</div>
+<div class="container">
+	<h2 class="text-center">Get the <span style="color:#E97451;">latest</span> updates</h2>
+	<br>
+	<div class="row">
+		<div class="col-sm-4 mb-4">
+			<a class="title-label" href="{{ latest_post.0.get_absolute_url }}">
+					<img class="w-100 mb-2" src="{{ latest_post.0.get_post_thumbnail }}">
+					<h5><strong>{{ latest_post.0.title }}</strong></h5>
+				</a>
+			<p class="text-label">{{ latest_post.0.post_snippet }}</p>
+			<small class="text-muted">{{ latest_post.0.date_written.date }}</small>
+		</div>
+		<div class="col-sm-4 mb-4">
+			<a class="title-label" href="{{ latest_post.1.get_absolute_url }}">
+					<img class="w-100 mb-2" src="{{ latest_post.1.get_post_thumbnail }}">
+					<h5><strong>{{ latest_post.1.title }}</strong></h5>
+				</a>
+			<p class="text-label">{{ latest_post.1.post_snippet }}</p>
+			<small class="text-muted">{{ latest_post.1.date_written.date }}</small>
+		</div>
+		<div class="col-sm-4 mb-4">
+			<a class="title-label" href="{{ latest_post.2.get_absolute_url }}">
+					<img class="w-100 mb-2" src="{{ latest_post.2.get_post_thumbnail }}">
+					<h5><strong>{{ latest_post.2.title }}</strong></h5>
+				</a>
+			<p class="text-label">{{ latest_post.2.post_snippet }}</p>
+			<small class="text-muted">{{ latest_post.2.date_written.date }}</small>
+		</div>
+	</div>
+	<div class="text-center">
+		<a href="{% url 'post_index' %}">
+			<button class="btn btn-custom">Read more</button>
+		</a>
+	</div>
 </div>
 {% endblock %}
