--- a/sdgpweb/static/css/main.css
+++ b/sdgpweb/static/css/main.css
@@ -72,7 +72,7 @@ footer a {
 }
 
 footer a:hover {
-	color: #70dab4;
+	color: #E97451;
 	text-decoration: none;
 }
 
@@ -143,6 +143,34 @@ footer a:hover {
 	display: flex;
 	flex-direction: column;
 	background-image: url('/static/img/blog-hero.png');
+	align-self: center;
+	height: 100%;
+	min-height: 40em;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	align-items: center;
+	justify-content: center;
+}
+
+.publication-image {
+	display: flex;
+	flex-direction: column;
+	background-image: url('/static/img/publication-hero.png');
+	align-self: center;
+	height: 100%;
+	min-height: 40em;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	align-items: center;
+	justify-content: center;
+}
+
+.contact-image {
+	display: flex;
+	flex-direction: column;
+	background-image: url('/static/img/contact-hero.png');
 	align-self: center;
 	height: 100%;
 	min-height: 40em;
