--- a/sdgpweb/templates/base.html
+++ b/sdgpweb/templates/base.html
@@ -50,27 +50,27 @@
 					<a class="nav-link" href="{% url 'event' %}">Events</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#">Publications</a>
+					<a class="nav-link" href="{% url 'publication' %}">Publications</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#">Contact</a>
+					<a class="nav-link" href="{% url 'contact_form' %}">Contact</a>
 				</li>
 				
 			</ul>
 			<ul class="navbar-nav ml-auto">
 				{% if user.is_authenticated %}
 					<li class="nav-item">
-						<a class="nav-link" href="#">@{{ user.username }}</a>
+						<a class="nav-link" href="{% url 'user_profile' %}">@{{ user.username }}</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Logout</a>
+						<a class="nav-link" href="{% url 'logout' %}">Logout</a>
 					</li>
 				{% else %}
 					<li class="nav-item">
-						<a class="nav-link" href="#">Login</a>
+						<a class="nav-link" href="{% url 'login' %}">Login</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Sign up</a>
+						<a class="nav-link" href="{% url 'signup' %}">Sign up</a>
 					</li>
 				{% endif %}
 			</ul>
@@ -98,7 +98,9 @@
 				        <!-- Links -->
 				        <h3 class="text-uppercase mt-3 mb-4">ADDRESS</h3>
 				        <ul class="list-unstyled">
-					        <!-- <img src="#" width="200"> -->
+				        	
+				        <img src="{% static 'img/fds_logo_img.png' %}" width="50">
+			
 					        <br>
 					        <p>Forest Department Sarawak Headquarters<br>Level 11-15, Bangunan Baitulmakmur II, Petra Jaya, 93050 Kuching, Sarawak</p>
 				        </ul>
@@ -171,7 +173,7 @@
 				    	<!-- Links -->
 					    <h3 class="text-uppercase mt-3 mb-4">CONNECT</h3>
 					    <ul class=" list-unstyled">
-					        <a class="fa fa-facebook pr-4" href="#"></a>
+					        <a class="fa fa-facebook pr-4" href="https://ms-my.facebook.com/sarawakdeltageopark/" target="_blank"></a>
 							<a class="fa fa-instagram" href="#"></a>
 					    </ul>
 
